# pl_analytics

./: .gitignore  package-lock.json
backend/: README.md  alembic.ini  database.py  pyproject.toml  verify_club_passing.py
backend/alembic/: env.py
backend/https/: test.http
backend/models/: players.py  rankings.py
backend/scrapings/: club.py  clubs.py  player.py  temp.py
backend/scrapings/log/: logger_setup.py  logging_config.py
backend/scrapings/utils/: html_fetcher.py
backend/web/repository/: player.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx  NewsDetail.tsx  NewsList.tsx  PostMatchReviewDetail.tsx  PostMatchReviewList.tsx  RankingTable.tsx  TeamDetail.tsx  TeamLogoBar.tsx  Top.tsx
frontend/src/data/: news.ts  teams.ts
frontend/src/locales/: en.json  ja.json
frontend/src/utils/: FormDots.tsx
